--- a/resources/Header.less
+++ b/resources/Header.less
@@ -43,13 +43,6 @@
     }
 }
 
-/* Ensure the tools display inline on Desktop // Remove if does nothing
-.ridvan-header-tools {
-    display: flex;
-    align-items: center;
-}
-*/
-
 /* --- GROUPS OF LINKS --- */
 /* Mobile Only drop-down menus (Sidebar links, Tools, Interwiki/Interlanguage Links) */
 .ridvan-text-menus {
@@ -69,6 +62,9 @@
 .ridvan-icon-menus {
     display: flex;
     align-items: center;
+}
+.mw-echo-ui-overlay {
+    z-index: 3;
 }
 
 /* --- STANDARD ICON STYLES (Edit, Talk, etc) --- */
