--- a/resources/Content.less
+++ b/resources/Content.less
@@ -87,6 +87,7 @@
     margin-right: 23px;
     overflow: auto;
     word-wrap: break-word;
+	max-height: max-content;
 
     @media (max-width: @max-width-breakpoint-tablet) {
         margin-right: 0;
