--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,6 +1,10 @@
 {{>Header}}
-{{>Notices}}
-{{>Sidebar}}
-{{>Content}}
-{{>CategoryPortlet}}
+<div id="ridvan-page-container">
+    {{>Sidebar}}
+    <div id="ridvan-content-column">
+        {{>Notices}}
+        {{>Content}}
+        {{>CategoryPortlet}}
+    </div>
+</div>
 {{>Footer}}
