--- a/resources/common.less
+++ b/resources/common.less
@@ -77,6 +77,7 @@ main {
     h4,
     h5,
     h6 {
+        font-weight: normal;
         color: @color-base;
         font-family: 'Linux Libertine', 'Times New Roman', 'Liberation Serif', 'Nimbus Roman', 'Noto Serif', 'Times', serif;
     }
