--- a/resources/Content.less
+++ b/resources/Content.less
@@ -82,7 +82,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     margin-right: 23px;
-    overflow: auto;
+    overflow: visible;
     word-wrap: break-word;
 
     @media (max-width: @max-width-breakpoint-tablet) {
