--- a/resources/Search.less
+++ b/resources/Search.less
@@ -29,8 +29,7 @@
 	}
 }
 
-/* Overwrite default search suggestions padding
-.suggestions-results {
-    padding: 7px 30px !important;
+/* Overwrite default search suggestions padding */
+.suggestions-result {
+    padding: 0.4em 1.25em;
 }
- */
