--- a/resources/PersonalMenu.less
+++ b/resources/PersonalMenu.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.skin.variables.less';
 
-#p-personal {
+.ridvan-personal-wrapper {
     order: 6;
 }
 
@@ -28,10 +28,6 @@
 	li {
 		display: block;
 	}
-}
-
-.mw-portlet-personal.mw-portlet li {
-    display: block;
 }
 
 /* 3. ANONYMOUS STATE (Icon Only) */
