--- a/resources/PersonalMenu.less
+++ b/resources/PersonalMenu.less
@@ -33,6 +33,7 @@
 /* 3. ANONYMOUS STATE (Icon Only) */
 .mw-portlet-personal.is-anon {
     width: 20px;
+	padding: 0px 10px 0px 0px;
     
     h3 {
         text-indent: -999px;
