--- a/resources/PersonalMenu.less
+++ b/resources/PersonalMenu.less
@@ -59,3 +59,19 @@
         color: @color-link;
     }
 }
+
+/* MOBILE OVERRIDE: Hide username, show only icon */
+@media ( max-width: @max-width-breakpoint-tablet ) {
+    .mw-portlet-personal.is-loggedin {
+        /* 1. Shrink back to icon size */
+        width: 20px; 
+
+        /* 2. Hide the text again */
+        h3 {
+            text-indent: -999px; 
+            width: 40px;
+            padding-left: 0;
+            background-position: center center; /* Center the icon again */
+        }
+    }
+}
