--- a/templates/Search.mustache
+++ b/templates/Search.mustache
@@ -1,10 +1,12 @@
 {{#data-search-box}}
-<form action="{{form-action}}" role="search" class="mw-portlet" id="searchform">
-    <input type="hidden" name="title" value="{{page-title}}">
-    <h3>
-        <label for="searchInput">{{msg-search}}</label>
-    </h3>
-    {{{html-input}}}
-    {{{html-button-search}}}
-</form>
+<div id="p-search" class="mw-portlet">
+	<form action="{{form-action}}" role="search" id="searchform">
+		<input type="hidden" name="title" value="{{page-title}}">
+		<h3>
+			<label for="searchInput">{{msg-search}}</label>
+		</h3>
+		{{{html-input}}}
+		{{{html-button-search}}}
+	</form>
+</div>
 {{/data-search-box}}
