--- a/resources/Search.less
+++ b/resources/Search.less
@@ -1,9 +1,14 @@
 @import 'mediawiki.skin.variables.less';
 
-#searchform {
+#p-search {
+	position: relative;
 	flex-grow: 1;
-	display: flex;
 	padding: 0 0.5em 0em 1em;
+}
+
+#searchform {
+	width: 100%;
+	margin: 0;
 
 	#searchInput {
 		width: 100%;
