--- a/resources/search/templates/TypeaheadListItem.mustache
+++ b/resources/search/templates/TypeaheadListItem.mustache
@@ -6,10 +6,10 @@
 	>
 		{{#icon}}<div class="citizen-typeahead-list-item-icon citizen-ui-icon mw-ui-icon-wikimedia-{{.}}"></div>{{/icon}}
 		{{#image}}
-		<div class="citizen-typeahead-list-item-image-wrapper {{#image.class}} {{.}}{{/image.class}}">
-			{{#image.url}}
-				<img src="{{.}}" alt="" loading="lazy" class="citizen-typeahead-list-item-image" />
-			{{/image.url}}
+		<div
+			class="citizen-typeahead-list-item-image{{#image.class}} {{.}}{{/image.class}}"
+			{{#image.url}}style="background-image: url({{.}});"{{/image.url}}
+		>
 		</div>
 		{{/image}}
 		<div class="citizen-typeahead-list-item-text">
