--- a/resources/search/templates/TypeaheadElement.mustache
+++ b/resources/search/templates/TypeaheadElement.mustache
@@ -1,4 +1,4 @@
-<div id="searchform-suggestions" class="citizen-typeahead">
+<div id="searchform-suggestions" class="czsearch-typeahead">
 	{{#array-lists}}{{>TypeaheadList}}{{/array-lists}}
 	{{#data-placeholder}}{{>TypeaheadPlaceholder}}{{/data-placeholder}}
 </div>
