--- a/resources/search/templates/TypeaheadPlaceholder.mustache
+++ b/resources/search/templates/TypeaheadPlaceholder.mustache
@@ -1,11 +1,11 @@
 <div
-	class="citizen-typeahead-placeholder"
-	id="citizen-typeahead-placeholder"
+	class="czsearch-typeahead-placeholder"
+	id="czsearch-typeahead-placeholder"
 	{{#hidden}}hidden{{/hidden}}
 >
-	<div class="citizen-typeahead-placeholder-content">
-		{{#icon}}<div class="citizen-typeahead-placeholder-icon citizen-ui-icon mw-ui-icon-wikimedia-{{.}}"></div>{{/icon}}
-		{{#title}}<div class="citizen-typeahead-placeholder-title">{{.}}</div>{{/title}}
-		{{#description}}<div class="citizen-typeahead-placeholder-description">{{.}}</div>{{/description}}
+	<div class="czsearch-typeahead-placeholder-content">
+		{{#icon}}<div class="czsearch-typeahead-placeholder-icon czsearch-ui-icon mw-ui-icon-wikimedia-{{.}}"></div>{{/icon}}
+		{{#title}}<div class="czsearch-typeahead-placeholder-title">{{.}}</div>{{/title}}
+		{{#description}}<div class="czsearch-typeahead-placeholder-description">{{.}}</div>{{/description}}
 	</div>
 </div>
