--- a/resources/search/search.less
+++ b/resources/search/search.less
@@ -48,8 +48,6 @@
 	right: 0;
 	width: 100%;
 	z-index: 100;
-	
-	/* Styles from skins.citizen.search.less */
 	border-bottom-right-radius: var( --border-radius-medium );
 	border-bottom-left-radius: var( --border-radius-medium );
 	.mixin-czsearch-font-styles( 'small' );
@@ -189,6 +187,28 @@
 .mw-ui-icon-wikimedia-ridvanEdit {
     -webkit-mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3E%3Csvg fill='%23000000' viewBox='0 0 36 36' stroke='currentColor' version='1.1' preserveAspectRatio='xMidYMid meet' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3Enote-edit-line%3C/title%3E%3Cpath d='M28,30H6V8H19.22l2-2H6A2,2,0,0,0,4,8V30a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V15l-2,2Z' class='clr-i-outline clr-i-outline-path-1'%3E%3C/path%3E%3Cpath d='M33.53,5.84,30.16,2.47a1.61,1.61,0,0,0-2.28,0L14.17,16.26l-1.11,4.81A1.61,1.61,0,0,0,14.63,23,1.69,1.69,0,0,0,15,23l4.85-1.07L33.53,8.12A1.61,1.61,0,0,0,33.53,5.84ZM18.81,20.08l-3.66.81L16,17.26,26.32,6.87l2.82,2.82ZM30.27,8.56,27.45,5.74,29,4.16,31.84,7Z' class='clr-i-outline clr-i-outline-path-2'%3E%3C/path%3E%3C/svg%3E");
     mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3E%3Csvg fill='%23000000' viewBox='0 0 36 36' stroke='currentColor' version='1.1' preserveAspectRatio='xMidYMid meet' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3Enote-edit-line%3C/title%3E%3Cpath d='M28,30H6V8H19.22l2-2H6A2,2,0,0,0,4,8V30a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V15l-2,2Z' class='clr-i-outline clr-i-outline-path-1'%3E%3C/path%3E%3Cpath d='M33.53,5.84,30.16,2.47a1.61,1.61,0,0,0-2.28,0L14.17,16.26l-1.11,4.81A1.61,1.61,0,0,0,14.63,23,1.69,1.69,0,0,0,15,23l4.85-1.07L33.53,8.12A1.61,1.61,0,0,0,33.53,5.84ZM18.81,20.08l-3.66.81L16,17.26,26.32,6.87l2.82,2.82ZM30.27,8.56,27.45,5.74,29,4.16,31.84,7Z' class='clr-i-outline clr-i-outline-path-2'%3E%3C/path%3E%3C/svg%3E");
+}
+
+/* --- LOADING STATE --- */
+.czsearch-typeahead-loading {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+		&-spinner {
+		    border: 3px solid rgba(0, 0, 0, 0.1);
+		    border-left-color: var(--color-emphasized);
+		    border-radius: 50%;
+		    width: 24px;
+		    height: 24px;
+		    animation: czsearch-spin 1s linear infinite;
+	}
+}
+
+@keyframes czsearch-spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 /* --- MOBILE: FULL WIDTH DROPDOWN --- */
