--- a/resources/common.less
+++ b/resources/common.less
@@ -88,6 +88,11 @@ main {
         &:visited {
             color: @color-link--visited;
         }
+
+        &.new,
+        &.new:visited {
+            color: @color-link-new;
+        }
     }
 
     main {
