--- a/resources/Content.less
+++ b/resources/Content.less
@@ -73,6 +73,13 @@
 	margin-left: 8px;
 }
 
+.mw-notification-area-overlay {
+    margin-top: 2em;
+}
+.postedit {
+	margin-top: 3em;
+}
+
 .catlinks select {
     font-size: 1rem;
     padding: 4px;
