--- a/resources/Content.less
+++ b/resources/Content.less
@@ -80,6 +80,10 @@
 	margin-top: 3em;
 }
 
+.page-Main_Page #catlinks {
+    display: none;
+}
+
 .catlinks select {
     font-size: 1rem;
     padding: 4px;
