--- a/resources/Content.less
+++ b/resources/Content.less
@@ -83,6 +83,9 @@
 .page-Main_Page #catlinks {
     display: none;
 }
+.main_page #catlinks {
+    display: none;
+}
 
 .catlinks select {
     font-size: 1rem;
