--- a/resources/skin.less
+++ b/resources/skin.less
@@ -1,4 +1,4 @@
-/** Ridvan */
+/** Nightingale */
 
 // Import MediaWiki skin variables for general fundamental styling.
 @import 'mediawiki.skin.variables.less';
@@ -15,7 +15,6 @@
 	@import 'PersonalMenu.less';
 	@import 'Logo.less';
 	@import 'Search.less';
-	@import 'Sidebar.less';
 	@import 'Sitename.less';
 	@import 'Content.less';
 	@import 'TableOfContents.less';
