--- a/resources/common.less
+++ b/resources/common.less
@@ -8,24 +8,7 @@ html {
 }
 
 body {
-    max-width: 100%;
-    margin: 0 auto;
-    font-family: @font-family;
-    line-height: 1.5;
-}
-
-main {
-    padding: 1em;
-
-    & ~ nav,
-    & ~ footer {
-        padding: 1em;
-    }
-}
-
-@media screen {
-body {
-    background: #e6e6e6; /* Darker background for contrast with fixed sheet */
+    background: #e6e6e6;
     color: @color-base;
     margin: 0;
     font-family: @font-family;
@@ -162,5 +145,4 @@ body {
             left: 0;
         }
     }
-}
 }
