--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -3,7 +3,7 @@
     {{>Sitename}}
     
     <nav class="nightingale-nav">
-        {{#data-portlets-sidebar}}
+        {{#nightingale-nav-portlets}}
             <div class="mw-portlet mw-portlet-dropdown">
                 <input type="checkbox" id="cb-nav-{{id}}" class="mw-checkbox-hack-checkbox">
                 <label for="cb-nav-{{id}}" class="mw-checkbox-hack-button">{{label}} ▾</label>
