--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -13,7 +13,7 @@
                     </ul>
                 </div>
             </div>
-        {{/data-portlets-sidebar}}
+        {{/nightingale-nav-portlets}}
     </nav>
 
     {{>Search}}
