--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,34 +1,40 @@
 <header class="mw-header nightingale-header">
-    {{>Logo}}
-    {{>Sitename}}
     
-    <nav class="nightingale-nav">
-        {{#nightingale-nav-portlets}}
-            <div class="mw-portlet mw-portlet-dropdown">
-                <input type="checkbox" id="cb-nav-{{id}}" class="mw-checkbox-hack-checkbox">
-                <label for="cb-nav-{{id}}" class="mw-checkbox-hack-button">{{label}} ▾</label>
-                <div class="mw-portlet-body">
-                    <ul>
-                        {{#array-items}}{{>ListItem}}{{/array-items}}
-                    </ul>
+    <div class="nightingale-header-row-primary">
+        {{>Logo}}
+        {{>Sitename}}
+        {{>Search}}
+    </div>
+
+    <div class="nightingale-header-row-secondary">
+        
+        <nav class="nightingale-nav">
+            {{#nightingale-header-portlets}}
+                <div class="mw-portlet mw-portlet-dropdown">
+                    <input type="checkbox" id="cb-nav-{{id}}" class="mw-checkbox-hack-checkbox">
+                    <label for="cb-nav-{{id}}" class="mw-checkbox-hack-button">{{label}} ▾</label>
+                    <div class="mw-portlet-body">
+                        <ul>
+                            {{#array-items}}{{>ListItem}}{{/array-items}}
+                        </ul>
+                    </div>
+                </div>
+            {{/nightingale-header-portlets}}
+        </nav>
+
+        <div class="ridvan-header-tools">
+            <div class="ridvan-icon-menus">
+                {{>ContentEdit}}
+                {{>ContentTalk}}
+                {{>Notifications}}
+                <div class="ridvan-menu-wrapper">
+                    {{>Dropdown}}{{>ContentHybrid}}
+                </div>
+                <div class="ridvan-menu-wrapper ridvan-personal-wrapper">
+                    {{>Dropdown}}{{>PersonalMenu}}
                 </div>
             </div>
-        {{/nightingale-nav-portlets}}
-    </nav>
-
-    {{>Search}}
-
-    <div class="ridvan-header-tools">
-        <div class="ridvan-icon-menus">
-            {{>ContentEdit}}
-            {{>ContentTalk}}
-            {{>Notifications}}
-            <div class="ridvan-menu-wrapper">
-                {{>Dropdown}}{{>ContentHybrid}}
-            </div>
-            <div class="ridvan-menu-wrapper ridvan-personal-wrapper">
-                {{>Dropdown}}{{>PersonalMenu}}
-            </div>
         </div>
+
     </div>
 </header>
